WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
27782
[Chromium] getStringIdentifier() in V8NPUtils doesn't handle UTF8 identifiers
https://bugs.webkit.org/show_bug.cgi?id=27782
Summary
[Chromium] getStringIdentifier() in V8NPUtils doesn't handle UTF8 identifiers
Nate Chapin
Reported
2009-07-28 14:35:34 PDT
Original report:
http://code.google.com/p/chromium/issues/detail?id=17829
Attachments
patch
(1.94 KB, patch)
2009-07-28 14:40 PDT
,
Nate Chapin
fishd
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Nate Chapin
Comment 1
2009-07-28 14:40:14 PDT
Created
attachment 33673
[details]
patch
Nate Chapin
Comment 2
2009-07-28 16:12:41 PDT
Landed as
r46504
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug