2009-07-28  Nate Chapin  <japhet@chromium.org>

Reviewed by Darin Fisher.

        Fix V8NPUtils' handling of UTF8 identifiers.

        https://bugs.webkit.org/show_bug.cgi?id=27782



Canonical link: https://commits.webkit.org/38110@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@46504 268f45cc-cd09-0410-ab3c-d52691b4dbfc